--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ certifi==2025.1.31
 distro==1.9.0
 Django==5.1.6
 django-environ==0.12.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 jiter==0.8.2
 openai==1.65.4
+packaging==24.2
 pydantic==2.10.6
 pydantic_core==2.27.2
 python-decouple==3.8
@@ -19,3 +21,4 @@ sniffio==1.3.1
 sqlparse==0.5.3
 tqdm==4.67.1
 typing_extensions==4.12.2
+whitenoise==6.9.0
